<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <wzw.pikaqiu.ui.widget.MyEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_name"
            android:textCursorDrawable="@null"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_user_name"
            app:met_maxCharacters="20"
            app:met_primaryColor="?colorPrimary"
            app:met_singleLineEllipsis="true" />

        <wzw.pikaqiu.ui.widget.MyEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_password"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_user_password"
            app:met_maxCharacters="20"
            app:met_primaryColor="?colorPrimary"
            app:met_singleLineEllipsis="true" />

        <CheckBox
            android:id="@+id/che_save_pas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/che_save_pas"
            android:text=" 记住密码"
            android:textColor="@color/gray"
            android:textSize="13dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:elevation="5dp"
            android:text="@string/btn_login" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:text="？帮助"
        android:textSize="10dp" />
</RelativeLayout>
